--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -6,12 +6,7 @@
 	},
 
 	"remoteUser": "vscode",
-	"runArgs": [
-		"-e", "DISPLAY=:0.0",
-		"--net", "host",
-		"-v", "/tmp/.X11-unix:/tmp/.X11-unix",
-		"--name", "xv6-zig"
-	],
+	"runArgs": [],
 
 	"customizations": {
 		"vscode": {
