--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -4,15 +4,15 @@
 ARG VARIANT="jammy"
 FROM mcr.microsoft.com/vscode/devcontainers/base:0-${VARIANT}
 
-ARG ZIG_VERSION="0.12.0-dev.3142+9d500bda2"
+ARG ZIG_VERSION="0.16.0-dev.1859+212968c57"
 
 # [Optional] Uncomment this section to install additional OS packages.
 RUN apt-get update && export DEBIAN_FRONTEND=noninteractive \
-    && apt-get -y install --no-install-recommends git nasm build-essential qemu qemu-system qemu-system-common qemu-utils qemu-system-gui xorriso grub2 gdb
+    && apt-get -y install --no-install-recommends git nasm build-essential qemu qemu-system qemu-system-common qemu-utils qemu-system-gui xorriso gdb grub-common
 
-RUN curl -L https://ziglang.org/builds/zig-linux-x86_64-${ZIG_VERSION}.tar.xz -o zig.tar.xz \
+RUN curl -L https://ziglang.org/builds/zig-x86_64-linux-${ZIG_VERSION}.tar.xz -o zig.tar.xz \
     && mkdir -p /usr/src \
     && tar xf zig.tar.xz -C /usr/src \
-    && mv /usr/src/zig-linux-x86_64-${ZIG_VERSION} /usr/src/zig
+    && mv /usr/src/zig-x86_64-linux-${ZIG_VERSION} /usr/src/zig
 
 ENV PATH /usr/src/zig:$PATH
